# virtual_environment_exercise

./: GithubMain.py  README.md  main.py  pyproject.toml  setup.py
GithubPackages/: GithubSecond.py  __init__.py
Seconds/: Other.py
src/: GithubMain.py
src1/: GithubMain.py
src2/: GithubSecond.py
