[tool.poetry]
name = "virtual-environment-exercise"
version = "0.1.0"
description = ""
authors = ["Mikael <mks@danskecommodities.com>"]
readme = "README.md"
packages = [{include = "virtual_environment_exercise"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
